# Production-ML-API--FastAPI-Docker-Logging-main

./: Dockerfile  LICENSE  Makefile  README.md  __init__.py  conftest.py  docker-compose.yml  main.py  model_loader.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  test_api.py
